--- a/app/src/main/res/layout/activity_bloquery.xml
+++ b/app/src/main/res/layout/activity_bloquery.xml
@@ -16,6 +16,7 @@
             android:id="@+id/toolbar_bloquery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:minHeight="?attr/actionBarSize"
             android:background="?attr/colorPrimary"/>
 
