--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -2,13 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:orientation="vertical"
+                android:background="#ffffff"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_margin="10dp"
+                android:elevation="4dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20sp"
+                android:paddingRight="20sp"
+                android:paddingTop="20sp"
+                android:paddingBottom="12dp">
 
     <TextView
         android:id="@+id/text_question_string"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/text_size_18"
+        android:textColor="@color/black_87"
         tools:text="What is your questionString?"/>
 
     <TextView
@@ -16,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_question_string"
+        android:visibility="gone"
         tools:text="5 answers"/>
 
     <ImageView
@@ -38,5 +48,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
+        android:visibility="gone"
         android:background="@android:color/darker_gray"/>
 </RelativeLayout>
