--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#2d2c2c</color>
 
     <color name="text_primary">@color/black_87</color>
     <color name="text_secondary">@color/black_54</color>
@@ -11,4 +11,5 @@
     <color name="black_87">#DD000000</color>
     <color name="black_54">#79000000</color>
     <color name="black_26">#3A000000</color>
+    <color name="white">#ffffff</color>
 </resources>
