--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,7 @@
     <dimen name="button_vertical_margin">24dp</dimen>
     <dimen name="nav_item_title_height">48dp</dimen>
     <dimen name="nav_item_horizontal_padding">16dp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
+    <dimen name="text_size_36">36sp</dimen>
+
 </resources>
