--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,9 +3,13 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+    android:id="@+id/parentLayout"
             android:fitsSystemWindows="true">
-    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
+        android:id="@+id/parentPanel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -48,16 +52,34 @@
             android:layout_gravity="center"
             android:text="@string/action_login"/>
 
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/parentPanel">
+
         <!-- Create Account text option-->
         <TextView
             android:id="@+id/link_create_account"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/login_vertical_padding"
-            android:textSize="@dimen/login_text_size"
             android:gravity="center"
-            android:text="@string/link_signup"/>
+            android:text="@string/link_signup"
+            android:paddingLeft="@dimen/default_padding"
+            android:layout_alignParentLeft="true"
+            android:textSize="@dimen/login_text_size" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/forgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/forgotpassword"
+            android:paddingRight="@dimen/default_padding"
+            android:layout_alignParentRight="true"
+            android:textSize="@dimen/login_text_size" />
 
+    </RelativeLayout>
+    </RelativeLayout>
 </ScrollView>
