--- a/app/src/main/res/menu/single_question.xml
+++ b/app/src/main/res/menu/single_question.xml
@@ -7,4 +7,10 @@
           android:title="@string/menu_answer"
           android:orderInCategory="0"
           app:showAsAction="never"/>
+
+    <item android:id="@+id/action_delete"
+        android:icon="@drawable/ic_more_vert_black_24dp"
+        android:title="@string/action_delete_ques"
+        android:orderInCategory="0"
+        app:showAsAction="never"/>
 </menu>
