--- a/app/src/main/res/layout/answer_list_item.xml
+++ b/app/src/main/res/layout/answer_list_item.xml
@@ -2,15 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="#ffffff"
+    android:background="@color/white"
+    android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
-    android:layout_margin="10dp"
-    android:elevation="4dp"
     android:layout_height="wrap_content"
-    android:paddingLeft="20sp"
-    android:paddingRight="20sp"
-    android:paddingTop="20sp"
-    android:paddingBottom="12dp">
+    android:paddingLeft="10sp"
+    android:paddingRight="10sp"
+    android:paddingTop="10sp"
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/text_answer_string"
@@ -19,6 +18,7 @@
         android:textSize="@dimen/text_size_18"
         android:textColor="@color/black_87"
         tools:text="Here's my response..."/>
+
 
     <ImageView
         android:layout_width="40dp"
