--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -1,63 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:orientation="vertical"
-                android:background="#ffffff"
-                android:layout_width="match_parent"
-                android:layout_margin="10dp"
-                android:elevation="4dp"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20sp"
-                android:paddingRight="20sp"
-                android:paddingTop="20sp"
-                android:paddingBottom="12dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#ffffff"
+    android:orientation="vertical"
+    android:paddingBottom="12dp"
+    android:paddingLeft="20sp"
+    android:paddingRight="20sp"
+    android:paddingTop="20sp"
+    android:layout_marginBottom="10dp">
 
     <TextView
         android:id="@+id/text_question_string"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_18"
+        android:paddingBottom="5dp"
         android:textColor="@color/black_87"
-        android:paddingBottom="20dp"
-        tools:text="What is your questionString?"/>
+        android:textSize="@dimen/text_size_18"
+        tools:text="What is your questionString?" />
 
-    <TextView
-        android:id="@+id/text_question_number_of_answers"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/likedStatusLayout"
         android:layout_below="@+id/text_question_string"
-        android:visibility="gone"
-        tools:text="5 answers"/>
+        android:orientation="horizontal"
+        android:padding="5dp">
 
-    <ImageView
-        android:id="@+id/image_question_user_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_question_string"
-        android:layout_alignParentRight="true"
-        tools:src="@android:drawable/star_big_on"/>
+        <ImageView
+            android:id="@+id/likedStatusImageView"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_not_liked" />
 
-    <TextView
-        android:id="@+id/noOfAnswersTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/text_question_string"
-        android:layout_below="@+id/image_question_user_image"
-        android:visibility="gone"
-        tools:text="Answers:" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:id="@+id/statusTextView"
+            android:text="Liked" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/text_question_time_stamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image_question_user_image"
+        android:gravity="bottom"
+        android:layout_alignBottom="@+id/likedStatusLayout"
         android:layout_alignParentRight="true"
-        tools:text="Submitted: 1 Jan 2015"/>
+        android:layout_below="@+id/text_question_string"
+        tools:text="Submitted: 1 Jan 2015" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        android:background="@android:color/darker_gray"/>
 </RelativeLayout>
