--- a/app/src/main/res/menu/bloquery.xml
+++ b/app/src/main/res/menu/bloquery.xml
@@ -3,8 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_add_question_bloquery"
-          android:icon="@drawable/ic_more_vert_black_24dp"
           android:title="@string/menu_add_question"
-          android:orderInCategory="0"
-          app:showAsAction="never"/>
+          android:orderInCategory="100"
+          app:showAsAction="always"/>
 </menu>
