--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="black_54">#79000000</color>
     <color name="black_26">#3A000000</color>
     <color name="white">#ffffff</color>
+    <color name="grey">#e3e3e3</color>
+    <color name="grey_dark">#aeabab</color>
 </resources>
